Menú navegación index.html
Crear menú navegación para poder acceder a las diferentes páginas.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
 
     </div>
 
+    <nav>
+        <h3>Acceso directo a paneles (solo para pruebas)</h3>
+        <ul>
+            <li><a href="panelCliente.html">Panel Cliente</a></li>
+            <li><a href="panelAdministrador.html">Panel Administrador</a></li>
+            <li><a href="panelFontanero.html">Panel Fontanero</a></li>
+            <li><a href="registro.html">Registrarse</a></li>
+        </ul>
+    </nav>
 </body>
 
 </html>
