--- a/panelCliente.html
+++ b/panelCliente.html
@@ -20,18 +20,18 @@
     <div class="cliente-container">
         <h2>Nuevo Pedido</h2>
         <form>
-            <label>Seleccionar producto:</label>
-            <select>
+            <label for="producto">Seleccionar producto:</label>
+            <select id="producto">
                 <option>Grifo</option>
                 <option>Tubería</option>
                 <option>Calentador</option>
             </select>
 
-            <label>Cantidad:</label>
-            <input type="number" min="1" value="1" />
+            <label for="cantidad">Cantidad:</label>
+            <input type="number" id="cantidad" min="1" value="1" />
 
-            <label>Dirección de entrega:</label>
-            <input type="text"/>
+            <label for="direccion">Dirección de entrega:</label>
+            <input type="text" id="direccion"/>
 
             <button type="submit">Continuar &#x2192;</button>
         </form>
@@ -45,8 +45,8 @@
         <form class="solicitar-servicios">
             
             <h2>Solicitar Servicios</h2>
-            <label>Tipo de servicio:</label>
-            <select>
+            <label for="tipoServicio">Tipo de servicio:</label>
+            <select id="tipoServicio">
                 <option>Reparación de grifo</option>
                 <option>Instalación de calentador</option>
                 <option>Mantenimiento de tuberías</option>
