--- a/panelCliente.html
+++ b/panelCliente.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PlumbingSystem - Cliente</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -17,44 +17,48 @@
             <li><a href="panelAdministrador.html">Panel Administrador</a></li>
             <li><a href="panelFontanero.html">Panel Fontanero</a></li>
         </ul>
-    <div class="cliente-container">
-        <h2>Nuevo Pedido</h2>
-        <form>
-            <label for="producto">Seleccionar producto:</label>
-            <select id="producto">
-                <option>Grifo</option>
-                <option>Tubería</option>
-                <option>Calentador</option>
-            </select>
+        <div class="cliente-container">
+            <header>
+                <h1>PlumbingSystem</h1>
+                <h2>Cliente</h2>
+            </header>
+            <h3>Nuevo Pedido</h3>
+            <form>
+                <label for="producto">Seleccionar producto:</label>
+                <select id="producto">
+                    <option>Grifo</option>
+                    <option>Tubería</option>
+                    <option>Calentador</option>
+                </select>
 
-            <label for="cantidad">Cantidad:</label>
-            <input type="number" id="cantidad" min="1" value="1" />
+                <label for="cantidad">Cantidad:</label>
+                <input type="number" id="cantidad" min="1" value="1" />
 
-            <label for="direccion">Dirección de entrega:</label>
-            <input type="text" id="direccion"/>
+                <label for="direccion">Dirección de entrega:</label>
+                <input type="text" id="direccion" />
 
-            <button type="submit">Continuar &#x2192;</button>
-        </form>
+                <button type="submit">Continuar &#x2192;</button>
+            </form>
 
-        <h2>Mis Pedidos</h2>
-        <ul>
-            <li>Pedido #001 - Estado: Pendiente</li>
-            <li>Pedido #002 - Estado: En Progreso</li>
-        </ul>
+            <h3>Mis Pedidos</h3>
+            <ul>
+                <li>Pedido #001 - Estado: Pendiente</li>
+                <li>Pedido #002 - Estado: En Progreso</li>
+            </ul>
 
-        <form class="solicitar-servicios">
-            
-            <h2>Solicitar Servicios</h2>
-            <label for="tipoServicio">Tipo de servicio:</label>
-            <select id="tipoServicio">
-                <option>Reparación de grifo</option>
-                <option>Instalación de calentador</option>
-                <option>Mantenimiento de tuberías</option>
-            </select>
-            <button type="submit">Enviar Solicitud &#x2192;</button>
-        </form>
-        </main>
-    </div>
+            <form class="solicitar-servicios">
+
+                <h3>Solicitar Servicios</h3>
+                <label for="tipoServicio">Tipo de servicio:</label>
+                <select id="tipoServicio">
+                    <option>Reparación de grifo</option>
+                    <option>Instalación de calentador</option>
+                    <option>Mantenimiento de tuberías</option>
+                </select>
+                <button type="submit">Enviar Solicitud &#x2192;</button>
+            </form>
+            </main>
+        </div>
 </body>
 
 </html>
