Añadiendo más elementos
Añadiendo más elementos a la página

--- a/panelAdministrador.html
+++ b/panelAdministrador.html
@@ -51,7 +51,46 @@
             </table>
 
             <h3>Gestión de Pedidos</h3>
-            <p>(Listado con estado y opción de modificar)</p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>ID Pedido</th>
+                        <th>Cliente</th>
+                        <th>Estado</th>
+                        <th>Acción</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>2001</td>
+                        <td>Juan Pérez</td>
+                        <td>Pendiente</td>
+                        <td><button>Modificar</button></td>
+                    </tr>
+                    <tr>
+                        <td>2002</td>
+                        <td>Laura Gómez</td>
+                        <td>En Progreso</td>
+                        <td><button>Modificar</button></td>
+                    </tr>
+                    <tr>
+                        <td>2003</td>
+                        <td>Marcos Ruiz</td>
+                        <td>Completado</td>
+                        <td><button>Modificar</button></td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <h3>Estadísticas y Reportes</h3>
+            <ul>
+                <li>Total de pedidos: <strong>125</strong></li>
+                <li>Servicios pendientes: <strong>7</strong></li>
+                <li>Clientes registrados: <strong>34</strong></li>
+                <li>Fontaneros activos: <strong>5</strong></li>
+            </ul>
+
+            <p><em>Estos datos reflejan el estado general del sistema y ayudan en la toma de decisiones.</em></p>
         </main>
     </div>
 </body>
