Mejorando Sección Estadísticas y Reportes
Cambiando la forma en la que se verán los datos de la sección de Estadísticas y Reportes, de una forma textual a otra más visual tipo con barras.

--- a/panelAdministrador.html
+++ b/panelAdministrador.html
@@ -83,14 +83,25 @@
             </table>
 
             <h3>Estadísticas y Reportes</h3>
-            <ul>
-                <li>Total de pedidos: <strong>125</strong></li>
-                <li>Servicios pendientes: <strong>7</strong></li>
-                <li>Clientes registrados: <strong>34</strong></li>
-                <li>Fontaneros activos: <strong>5</strong></li>
-            </ul>
+            <div class="estadisticas">
+                <div class="stat">
+                    <div class="circle" style="--percent: 80"></div>
+                    <p>Pedidos Totales<br><strong>125</strong></p>
+                </div>
+                <div class="stat">
+                    <div class="circle" style="--percent: 25"></div>
+                    <p>Servicios Pendientes<br><strong>7</strong></p>
+                </div>
+                <div class="stat">
+                    <div class="circle" style="--percent: 60"></div>
+                    <p>Clientes Registrados<br><strong>34</strong></p>
+                </div>
+                <div class="stat">
+                    <div class="circle" style="--percent: 40"></div>
+                    <p>Fontaneros Activos<br><strong>5</strong></p>
+                </div>
 
-            <p><em>Estos datos reflejan el estado general del sistema y ayudan en la toma de decisiones.</em></p>
+                <p><em>Estos datos reflejan el estado general del sistema y ayudan en la toma de decisiones.</em></p>
         </main>
     </div>
 </body>
