Mejorando las tareas en progreso
Mejorando la apariencia de cuando una tarea está en progreso, aparezca una barra de progreso en vez de un texto.

--- a/panelFontanero.html
+++ b/panelFontanero.html
@@ -46,7 +46,12 @@
                     <td>302</td>
                     <td>Instalación</td>
                     <td>2025-06-02</td>
-                    <td>En Progreso</td>
+                    <td>
+                        En Progreso
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 60%;"></div>
+                        </div>
+                    </td>
                     <td><button>Finalizar</button></td>
                 </tr>
             </tbody>
