--- a/panelFontanero.html
+++ b/panelFontanero.html
@@ -18,77 +18,78 @@
             <li><a href="panelAdministrador.html">Panel Administrador</a></li>
         </ul>
     </nav>
-    <header>
-        <h1>PlumbingSystem</h1>
-        <h2>Fontanero</h2>
-    </header>
-    <main>
-        <h3>Listado de Tareas</h3>
-        <table>
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Tipo</th>
-                    <th>Fecha</th>
-                    <th>Estado</th>
-                    <th>Acción</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>301</td>
-                    <td>Reparación</td>
-                    <td>2025-06-01</td>
-                    <td>Asignado</td>
-                    <td><button>Iniciar</button></td>
-                </tr>
-                <tr>
-                    <td>302</td>
-                    <td>Instalación</td>
-                    <td>2025-06-02</td>
-                    <td>
-                        En Progreso
-                        <div class="progress-bar">
-                            <div class="progress" style="width: 60%;"></div>
-                        </div>
-                    </td>
-                    <td><button>Finalizar</button></td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="fontanero-container">
+        <header>
+            <h1>PlumbingSystem</h1>
+            <h2>Fontanero</h2>
+        </header>
+        <main>
+            <h3>Listado de Tareas</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Tipo</th>
+                        <th>Fecha</th>
+                        <th>Estado</th>
+                        <th>Acción</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>301</td>
+                        <td>Reparación</td>
+                        <td>2025-06-01</td>
+                        <td>Asignado</td>
+                        <td><button>Iniciar</button></td>
+                    </tr>
+                    <tr>
+                        <td>302</td>
+                        <td>Instalación</td>
+                        <td>2025-06-02</td>
+                        <td>
+                            En Progreso
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 60%;"></div>
+                            </div>
+                        </td>
+                        <td><button>Finalizar</button></td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <h2>Historial de Servicios</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Tipo</th>
-                    <th>Fecha</th>
-                    <th>Estado</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>290</td>
-                    <td>Instalación</td>
-                    <td>2025-05-28</td>
-                    <td>Finalizado</td>
-                </tr>
-                <tr>
-                    <td>284</td>
-                    <td>Reparación</td>
-                    <td>2025-05-25</td>
-                    <td>Finalizado</td>
-                </tr>
-                <tr>
-                    <td>275</td>
-                    <td>Mantenimiento</td>
-                    <td>2025-05-20</td>
-                    <td>Finalizado</td>
-                </tr>
-            </tbody>
-        </table>
-    </main>
+            <h2>Historial de Servicios</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Tipo</th>
+                        <th>Fecha</th>
+                        <th>Estado</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>290</td>
+                        <td>Instalación</td>
+                        <td>2025-05-28</td>
+                        <td>Finalizado</td>
+                    </tr>
+                    <tr>
+                        <td>284</td>
+                        <td>Reparación</td>
+                        <td>2025-05-25</td>
+                        <td>Finalizado</td>
+                    </tr>
+                    <tr>
+                        <td>275</td>
+                        <td>Mantenimiento</td>
+                        <td>2025-05-20</td>
+                        <td>Finalizado</td>
+                    </tr>
+                </tbody>
+            </table>
+        </main>
     </div>
 </body>
 
