Añadiendo clases al botón
Añadiendo clases al botón

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <input type="password" id="password" name="password" required>
                 <br>
 
-                <input type="submit" value="Aceptar &#x2192;">
+                <input class="boton" type="submit" value="Aceptar &#x2192;">
 
                 <div class="acciones">
                     <a href="#">Olvidaste la contraseña?</a>
