--- a/panelCliente.html
+++ b/panelCliente.html
@@ -40,7 +40,7 @@
                 <label for="direccion">Dirección de entrega:</label>
                 <input type="text" id="direccion" />
 
-                <button type="submit">Continuar &#x2192;</button>
+                <button class="boton" type="submit">Continuar &#x2192;</button>
             </form>
 
             <h3>Mis Pedidos</h3>
@@ -58,7 +58,7 @@
                     <option>Instalación de calentador</option>
                     <option>Mantenimiento de tuberías</option>
                 </select>
-                <button type="submit">Enviar Solicitud &#x2192;</button>
+                <button class="boton" type="submit">Enviar Solicitud &#x2192;</button>
             </form>
             </main>
         </div>
