--- a/registro.html
+++ b/registro.html
@@ -45,7 +45,7 @@
                     <option value="fontanero">Fontanero</option>
                     <option value="admin">Administrador</option>
                 </select>
-                <input type="submit" value="Registrar &#x2192;">
+                <input class="boton" type="submit" value="Registrar &#x2192;">
             </form>
         </main>
     </div>
