Aplicando estilos y añadiendo imagenes
Aplicando las adaptaciones necesarias para que sea semejante al diseño de los Mockups

--- a/panelAdministrador.html
+++ b/panelAdministrador.html
@@ -21,7 +21,7 @@
             <li><a href="panelFontanero.html">Panel Fontanero</a></li>
         </ul>
     </nav>
-    <div class="container">
+    <div class="admin-container">
         <header>
             <h1>PlumbingSystem</h1>
             <h2>Administrador</h2>
