--- a/registro.html
+++ b/registro.html
@@ -39,7 +39,7 @@
 
                 <br>
 
-                <label for="rol">Rol</label>
+                <label class="rol" for="rol">Rol</label>
                 <select id="rol" name="rol" required>
                     <option value="cliente">Cliente</option>
                     <option value="fontanero">Fontanero</option>
