--- a/panelAdministrador.html
+++ b/panelAdministrador.html
@@ -21,6 +21,7 @@
             <li><a href="panelFontanero.html">Panel Fontanero</a></li>
         </ul>
     </nav>
+    <div class="fondo-azul-Administrador"></div>
     <div class="admin-container">
         <header>
             <h1>PlumbingSystem</h1>
@@ -28,7 +29,10 @@
         </header>
 
         <main>
-            <h3>Solicitudes Pendientes</h3>
+            <h3>Pendiente de Validación</h3>
+            <div class="pendienteValidacion-ilustracion">
+                <img src="images/ImgPendientevalidacion.png" alt="Ilustración de Pendiente de Validación" />
+            </div>
             <table>
                 <thead>
                     <tr>
@@ -54,6 +58,9 @@
             </table>
 
             <h3>Gestión de Pedidos</h3>
+            <div class="gestionPedidos-ilustracion">
+                <img src="images/ImgGestionPedidos.png" alt="Ilustración de Gestión de Pedidos" />
+            </div>
             <table>
                 <thead>
                     <tr>
@@ -86,6 +93,9 @@
             </table>
 
             <h3>Estadísticas y Reportes</h3>
+            <div class="estadisticasReportes-ilustracion">
+                <img src="images/ImgEstadisticasReportes.png" alt="Ilustración de Estadísticas y Reportes" />
+            </div>
             <div class="estadisticas">
                 <div class="stat">
                     <div class="circle" style="--percent: 80"></div>
