--- a/panelCliente.html
+++ b/panelCliente.html
@@ -20,12 +20,16 @@
             <li><a href="panelAdministrador.html">Panel Administrador</a></li>
             <li><a href="panelFontanero.html">Panel Fontanero</a></li>
         </ul>
+        <div class="fondo-azul-Administrador"></div>
         <div class="cliente-container">
             <header>
                 <h1>PlumbingSystem</h1>
                 <h2>Cliente</h2>
             </header>
             <h3>Nuevo Pedido</h3>
+            <div class="nuevoPedido-ilustracion">
+                <img src="images/ImgNuevoPedido.png" alt="Ilustración de Nuevo Pedido" />
+            </div>
             <form>
                 <label for="producto">Seleccionar producto:</label>
                 <select id="producto">
@@ -44,6 +48,9 @@
             </form>
 
             <h3>Mis Pedidos</h3>
+            <div class="misPedidos-ilustracion">
+                <img src="images/ImgMisPedidos.png" alt="Ilustración de MisPedidos" />
+            </div>
             <ul>
                 <li>Pedido #001 - Estado: Pendiente</li>
                 <li>Pedido #002 - Estado: En Progreso</li>
@@ -52,6 +59,9 @@
             <form class="solicitar-servicios">
 
                 <h3>Solicitar Servicios</h3>
+                <div class="solicitarServicios-ilustracion">
+                    <img src="images/ImgSolicitarServicios.png" alt="Ilustración de Solicitar Servicios" />
+                </div>
                 <label for="tipoServicio">Tipo de servicio:</label>
                 <select id="tipoServicio">
                     <option>Reparación de grifo</option>
