--- a/panelFontanero.html
+++ b/panelFontanero.html
@@ -21,6 +21,7 @@
             <li><a href="panelAdministrador.html">Panel Administrador</a></li>
         </ul>
     </nav>
+    <div class="fondo-azul-Administrador"></div>
     <div class="fontanero-container">
         <header>
             <h1>PlumbingSystem</h1>
@@ -28,6 +29,9 @@
         </header>
         <main>
             <h3>Listado de Tareas</h3>
+            <div class="listadoTareas-ilustracion">
+                <img src="images/ImgListadoTareas.png" alt="Ilustración de Listado de Tareas" />
+            </div>
             <table>
                 <thead>
                     <tr>
@@ -62,6 +66,9 @@
             </table>
 
             <h2>Historial de Servicios</h2>
+            <div class="historialServicios-ilustracion">
+                <img src="images/ImgHistorial.png" alt="Ilustración de Historial de Servicios" />
+            </div>
             <table>
                 <thead>
                     <tr>
