--- a/registro.html
+++ b/registro.html
@@ -19,12 +19,16 @@
             <li><a href="panelFontanero.html">Panel Fontanero</a></li>
         </ul>
     </nav>
+    <div class="fondo-azul"></div>
     <div class="registro-container">
         <header>
             <h1>PlumbingSystem</h1>
         </header>
         <main>
             <h2>Registrarse</h2>
+            <div class="login-ilustracion">
+                <img src="images/ImgRegistro.png" alt="Ilustración de registro" />
+            </div>
             <form action="#" method="post">
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" required>
