--- a/panelCliente.html
+++ b/panelCliente.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -20,10 +22,19 @@
             <li><a href="panelAdministrador.html">Panel Administrador</a></li>
             <li><a href="panelFontanero.html">Panel Fontanero</a></li>
         </ul>
-        <div class="fondo-azul-Administrador"></div>
+        <div class="fondo-azul-Administrador">
+            <div class="barra-iconos">
+                <div class="Icono-Menu">
+                    <img src="images/IconoMenu.png" alt="Menú">
+                </div>
+                <div class="Icono-Inicio">
+                    <img src="images/IconoInicio.png" alt="Inicio">
+                </div>
+            </div>
+        </div>
         <div class="cliente-container">
             <header>
-                <h1>PlumbingSystem</h1>
+                <h1>Plumbing System</h1>
                 <h2>Cliente</h2>
             </header>
             <h3>Nuevo Pedido</h3>
