Añadiendo Icono Carrito
Añadiendo Icono del Carrito

--- a/panelCliente.html
+++ b/panelCliente.html
@@ -27,6 +27,9 @@
                 <div class="Icono-Menu">
                     <img src="images/IconoMenu.png" alt="Menú">
                 </div>
+                <div class="Icono-Carrito">
+                    <img src="images/IconoCarrito.png" alt="Carrito">
+                </div>
                 <div class="Icono-Inicio">
                     <img src="images/IconoInicio.png" alt="Inicio">
                 </div>
